# amcp

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AUDIT_FILES.txt  AUDIT_SUMMARY.md  AUTO_ROUTER_COMPLETE_RESEARCH.txt  BIFROST_HTTP_API_IMPLEMENTATION.md  BIFROST_INTEGRATION.md  CLAUDE.md  CONSOLIDATION_SUMMARY.md  CORRECT_3_MICROSERVICE_ARCHITECTURE.md  COVERAGE_IMPROVEMENTS.md  COVERAGE_REPORT.md  DECOMPOSITION_REPORT.md  DEPLOYMENT_QUICKSTART.md  DEPLOYMENT_STATUS.md  DEPRECATED_CODE_AUDIT_REPORT.md  DEPRECATED_CODE_REMOVAL_CHECKLIST.md  DEPRECATED_CODE_REMOVAL_EXECUTION_REPORT.md  Dockerfile  GAPS_ANALYSIS.md  HTTP2_SETUP.md  LOCAL_DEPLOYMENT.md  MCP_INFERENCE_INTEGRATION.md  MCP_REGISTRY_RESEARCH_COMPLETE.txt  MEMORY_OPTIMIZATION_FIXES.md  MODEL_ROUTER_COVERAGE_SUMMARY.md  Makefile  PHASE_0_5_FINDINGS.md  PHASE_0_5_SESSION_SUMMARY.md  PHASE_4_AGENTS_COMPLETE.txt  PHASE_4_SESSION_SUMMARY.txt  PHASE_4_SIGN_OFF.md  README.md  SDK_GENERATION_COMPLETE.md  SECURITY.md  START_HERE_DEPLOYMENT.md  STREAMING_GUIDE.md  Taskfile.yml  (+52 more)
.github/: dependabot.yml
.voyage_cache/: 1e5a5a8715609809.json
auth/: __init__.py  context.py  decorators.py  jwt_validator.py  middleware.py  oauth_cache.py  oauth_providers.py  provider.py  server.py  session_manager.py  token.py  validators.py
bifrost/: __init__.py  plugin.py  registry.py
bifrost_api/: Dockerfile  QUICKSTART.md  __init__.py  app.py  dependencies.py  middleware.py  routes.py
bifrost_backend/: .env.example  .gitignore  Dockerfile  Makefile  README.md  generate.sh  go.mod  go.sum  gqlgen.yml  quickstart.sh  schema.sql
bifrost_extensions/: Dockerfile.ml  QUICK_REFERENCE.md  README.md  README_PRODUCTION.md  __init__.py  exceptions.py  http_client.py  ml_service.py  models.py
bifrost_ml/: DEPLOYMENT.md  QUICKSTART.md  README.md  requirements.txt  start.sh
config/: __init__.py  bifrost.py  defaults.py  models.py  rate_limits.py  settings.py
coverage.html/: z_ad6ad80b60a455dd_executor.py,cover
docs/: ARCHITECTURE.md  AUDIT_DOCUMENTS.md  CI_CD_SETUP.md  CODE_COVERAGE_GUIDE.md  CONSOLIDATION_SUMMARY.md  COVERAGE_WORK_PACKAGES.md  DATABASE_OPTIONS_COMPLETE_SUMMARY.txt  DEPLOYMENT_CHECKLIST.md  DOCKER.md  FASTMCP_AUTH_ENHANCEMENT.md  FINAL_CLEANUP_PLAN.md  MOVE_EXECUTION_SUMMARY.md  OPTIMIZED_PLAN_SUMMARY.txt  POSTGRES_PGVECTOR_FTS_COMPLETE.txt  README.md  ROOT_FILES_MOVE_CORRECTED.md  ROOT_FILE_AUDIT_AND_MOVE_PLAN.md  SMARTCP_EPIC_PRD_INDEX.md  bifrost-extensions-sdk-generation.md
dsl_scope/: __init__.py  background_tasks.py  context_managers.py  dsl_system.py  (+4 more)
(+747 files in other folders)
